// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parameter Binding File parameter binding Should able to bind array of files 1`] = `
Array [
  Object {
    "name": "index.html",
    "type": "text/html",
  },
  Object {
    "name": "dice.png",
    "type": "image/png",
  },
  Object {
    "name": "clock.jpeg",
    "type": "image/jpeg",
  },
]
`;

exports[`Parameter Binding File parameter binding Should able to bind file 1`] = `
Object {
  "name": "clock.jpeg",
  "type": "image/jpeg",
}
`;

exports[`Parameter Binding File parameter binding Should able to bind file using decorator 1`] = `
Object {
  "name": "clock.jpeg",
  "type": "image/jpeg",
}
`;

exports[`Parameter Binding File parameter binding Should able to instantiate FormFile without error 1`] = `
FormFile {
  "mtime": "2018-1-1",
  "name": "file.jpg",
  "path": "/docs/file.jpg",
  "size": 200,
  "type": "image/jpeg",
}
`;

exports[`Parameter Binding File parameter binding Should not error when provided array of files but received single file 1`] = `
Array [
  Object {
    "name": "clock.jpeg",
    "type": "image/jpeg",
  },
]
`;

exports[`Parameter Binding File parameter binding Should not error when provided file binder decorator but provided no files 1`] = `
Array [
  Array [
    undefined,
  ],
]
`;
